# task3_to_do_list

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  qabstractlistmodel_data.cpp  qabstractlistmodel_data.h  saved to do list.txt
